--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
         <div class="col-md-8">
+            <div class="chat" id="all_chats"></div>
             <div class="chat" id="chat">
                 <!--The whole chat is here-->
             </div>
@@ -73,6 +74,7 @@
     var $userForm = $('#userFrom');
     var $users = $('#users');
     var $username = $('#username');
+    var $all_chats = $('#all_chats');
 
     var input;
     var user;
