added .gitignore, added single-chat button

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -101,6 +101,15 @@
         }
         $username.val('');
     };
+
+    $( "ul" ).click(function( event ) {
+        var target = $( event.target );
+        if ( target.is( "li" ) ) {
+            target.click(function () {
+                start_single_chat(this.id);
+            });
+        }
+    });
 </script>
 <script src="connect.js"></script>
 </body>
