--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="author" content="Simon">
-<title>TCP-Chat</title>
-
-<link rel="stylesheet" href="../assets/css/index.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script>
-    if (typeof module === 'object') {
-        window.module = module;
-        module = undefined;
-    }
-</script>
-<script>
-    require('../render.js');
-</script>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script>if (window.module) module = window.module;</script>
+    <meta charset="UTF-8">
+    <meta name="author" content="Simon">
+    <title>TCP-Chat</title>
+    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/mode.scss">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+    <script>
+        require('../render.js');
+    </script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script>if (window.module) module = window.module;</script>
 </head>
 <body id="background" class="body-background">
 <div class="container">
